--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "naksha-react-ui",
   "version": "0.1.0",
   "dependencies": {
+    "@turf/area": "^5.1.5",
     "axios": "^0.17.1",
     "boundingbox": "^0.1.1",
     "geohash": "0.0.1",
